<resources>
    <string name="app_name" translatable="false">Poppi App</string>
    <string name="app_version" translatable="false">6.2</string>
    <string name="app_year" translatable="false">2022</string>
    <string name="app_copyright" translatable="false">datingnet.fun</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb345345345345</string>
    <string name="action_login">Log in</string>
    <string name="action_signup">Sign up with email</string>
    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="action_continue">Continue</string>
    <string name="action_unblock">Unblock</string>
    <string name="action_block">Block</string>
    <string name="action_about">About</string>
    <string name="action_ok">OK</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_save">Save</string>
    <string name="action_send">Send</string>
    <string name="action_reply">Reply</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_report">Report</string>
    <string name="action_remove">Delete</string>
    <string name="action_remove_chat">Delete chat</string>
    <string name="action_deactivate">Deactivate</string>
    <string name="action_create">Create</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_more">Load more</string>
    <string name="action_search">Search</string>
    <string name="action_retry">Retry</string>
    <string name="action_turn_on">Turn on</string>
    <string name="action_select_birth">Date of Birth</string>
    <string name="action_camera">Camera</string>
    <string name="action_gallery">Choose from gallery</string>
    <string name="settings_allow_messages">Receive messages from anyone</string>
    <string name="settings_allow_messages_summary">You will be able to receive Direct Messages from any user even if you do not follow them.</string>
    <string name="action_enable">Enable</string>
    <string name="action_accept">Accept</string>
    <string name="action_reject">Reject</string>
    <string name="action_add_to_friends">Add to friends</string>
    <string name="action_remove_from_friends">Remove from friends</string>
    <string name="action_buy_credits">Get More Credits</string>
    <string name="action_profile_edit_photo">Edit photo</string>
    <string name="action_profile_edit">Edit</string>
    <string name="action_remove_connection">Remove connection</string>
    <string name="action_regular_signup">Back to the regular registration form</string>
    <string name="action_forgot_password">Forgot password?</string>
    <string name="label_profile_report_0">Spam</string>
    <string name="label_profile_report_1">Hate speech or violence</string>
    <string name="label_profile_report_2">Nudity or Pornography</string>
    <string name="label_profile_report_3">Fake profile</string>
    <string name="label_profile_report_4">Piracy</string>
    <string name="label_gender_select_title">Choose gender</string>
    <string name="label_age">Age</string>
    <string name="label_sex">Gender</string>
    <string name="label_male">Male</string>
    <string name="label_female">Female</string>
    <string name="label_sex_male">Gender Male</string>
    <string name="label_sex_female">Gender Female</string>
    <string name="label_profile_join">Join Date</string>
    <string name="placeholder_password">Password</string>
    <string name="placeholder_login">Username</string>
    <string name="placeholder_fullname">Fullname</string>
    <string name="placeholder_location">Location</string>
    <string name="placeholder_instagram_page">Instagram page</string>
    <string name="placeholder_bio">Bio</string>
    <string name="placeholder_email">Email</string>
    <string name="placeholder_subject">Subject</string>
    <string name="placeholder_support_detail">What are you contacting us about?</string>
    <string name="placeholder_current_password">Current password</string>
    <string name="placeholder_new_password">New password</string>
    <string name="placeholder_gift">Add a comment for gift&#8230;</string>
    <string name="placeholder_comment">Type a comment&#8230;</string>
    <string name="placeholder_message">Type a message&#8230;</string>
    <string name="msg_loading">Please wait&#8230;</string>
    <string name="msg_loading_2">Loading. Please wait&#8230;</string>
    <string name="msg_network_error">Please check your Internet connection</string>
    <string name="msg_account_blocked">This account is blocked by a moderator.</string>
    <string name="msg_copied_to_clipboard">Copied to clipboard.</string>
    <string name="msg_enter_msg">Please write something or attach photo.</string>
    <string name="msg_send_msg_error">You can not send a message to the user.</string>
    <string name="msg_gift_sent">Gift has been successfully sent.</string>
    <string name="msg_password_changed">Password successfully changed</string>
    <string name="msg_settings_saved">Settings successfully saved.</string>
    <string name="msg_ticket_send_success">Your request is accepted! You will receive a response to the email, which is indicated in the request.</string>
    <string name="msg_password_reset_link_sent">A message with link to reset your password has been sent to your email.</string>
    <string name="msg_no_such_user_in_bd">No such user in database</string>
    <string name="msg_comment_has_been_added">Comment has been added.</string>
    <string name="msg_chat_has_been_removed">Chat has been removed.</string>
    <string name="msg_profile_removed_from_blacklist">The user is removed from blocked list.</string>
    <string name="msg_profile_link_copied">Profile link copied to clipboard.</string>
    <string name="msg_profile_added_to_blacklist">The user is added to blocked list.</string>
    <string name="msg_success_purchase">Purchase made! Congratulations!</string>
    <string name="label_disable_ads_enabled">Ads turned off!</string>
    <string name="error_signin">Incorrect username or password</string>
    <string name="error_data_loading">When loading data error has occurred. Check your network connection.</string>
    <string name="error_field_empty">Required fields are empty</string>
    <string name="error_wrong_format">Wrong format</string>
    <string name="error_small_password">Minimum 6 characters</string>
    <string name="error_small_username">Minimum 5 characters</string>
    <string name="error_small_fullname">Minimum 2 characters</string>
    <string name="error_login_taken">Username is already taken</string>
    <string name="error_email_taken">User with this email is already registered</string>
    <string name="error_password">Invalid password.</string>
    <string name="error_email">Email invalid.</string>
    <string name="error_credits">Not enough credits!</string>
    <string name="error_action">This user has forbidden you to do it!</string>
    <string name="error_no_friend">This user receives messages only from his friends!</string>
    <string name="label_gcm_like">You have new like.</string>
    <string name="label_gcm_profile_like">You have new profile like.</string>
    <string name="label_gcm_comment">You have a new comment.</string>
    <string name="label_gcm_friend_request">You have a new friend request.</string>
    <string name="label_gcm_friend_request_accepted">Friend Request accepted.</string>
    <string name="label_gcm_message">You have a new message.</string>
    <string name="label_gcm_gift">You have a new gift.</string>
    <string name="label_gcm_comment_reply">You have a new reply to comment.</string>
    <string name="label_authorization_via_facebook">Authorized via Facebook.</string>
    <string name="label_account_connected_to_facebook">Connected with Facebook</string>
    <string name="label_account_connect_to_facebook">Connect this account with your social network accounts</string>
    <string name="label_empty_list">List is empty.</string>
    <string name="label_nearby">Near you</string>
    <string name="label_block">Block</string>
    <string name="label_block_msg">will not be able send gifts to your and send your messages, and you will not see notifications from</string>
    <string name="label_delete">Delete</string>
    <string name="label_delete_msg">Do you want to delete this Item?</string>
    <string name="label_delete_comment">Are you sure you want to delete this comment?</string>
    <string name="label_report_dialog_title">Abuse report</string>
    <string name="label_last_message_image">Image</string>
    <string name="label_profile_reported">Profile reported.</string>
    <string name="label_item_reported">Item reported.</string>
    <string name="label_select_img">Select image</string>
    <string name="label_account_disabled">Account blocked</string>
    <string name="label_search_results_error">No results found</string>
    <string name="label_likes_item">likes your item.</string>
    <string name="label_likes_profile">likes your profile.</string>
    <string name="label_comment_added">added a new comment.</string>
    <string name="label_comment_reply_added">replied to your comment.</string>
    <string name="label_friend_request_added">sent you a request to friends.</string>
    <string name="label_gift_added">made a gift.</string>
    <string name="label_friend_request_dialog_title">Friend Request</string>
    <string name="label_photos">photos</string>
    <string name="label_gifts">gifts</string>
    <string name="label_friends">friends</string>
    <string name="label_likes">likes</string>
    <string name="label_online">Online</string>
    <string name="label_to">to</string>
    <string name="signup_label_1">By clicking Sign up, you agree to our</string>
    <string name="signup_label_terms_and_policies">Terms and Policies</string>
    <string name="settings_header_general">General</string>
    <string name="settings_header_others">Others</string>
    <string name="settings_notifications_likes">Likes</string>
    <string name="settings_notifications_comments">Comments</string>
    <string name="settings_notifications_friends">Friend Requests</string>
    <string name="settings_notifications_messages">Private messages</string>
    <string name="settings_notifications_gifts">Gifts</string>
    <string name="settings_logout">Log Out</string>
    <string name="settings_contact_us">Contact us</string>
    <string name="settings_contact_us_summary">Report a problem</string>
    <string name="settings_view_blocked_list">View blocked list</string>
    <string name="settings_deactivate_account">Deactivate account</string>
    <string name="settings_change_password">Change password</string>
    <string name="settings_services">Services</string>
    <string name="settings_services_summary">Connect with social network accounts</string>
    <string name="label_gender_any">Any</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>
    <string name="label_additional">Additional</string>
    <string name="label_hotgame_liked_checkbox">Show liked</string>
    <string name="action_choose_gender">Gender</string>
    <string name="action_grant_access">Grant access</string>
    <string name="register_screen_4_title">Name &amp; Gender</string>
    <string name="register_screen_4_subtitle">Enter your name and select gender</string>
    <string name="register_screen_5_title">Hotgame and Nearby</string>
    <string name="register_screen_5_subtitle">To access some features, the app needs permission to use your location.</string>
    <string name="label_register_terms">By clicking Continue, you agree to our</string>
    <string name="label_distance">Distance (%d)</string>
    <string name="settings_view_balance_history">Balance History</string>
    <string name="action_login_with_google">Continue with Google</string>
</resources>