<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:key="settings_preference_screen">

    <PreferenceCategory
        app:key="header_general"
        app:title="@string/settings_header_general"
        app:iconSpaceReserved="false">

        <Preference
            app:iconSpaceReserved="false"
            app:key="settings_change_password"
            app:title="@string/settings_change_password"
            app:enabled="true"
            app:summary="" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="settings_deactivate_account"
            app:title="@string/settings_deactivate_account"
            app:enabled="true"
            app:summary="" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="settings_blocked_list"
            app:title="@string/settings_view_blocked_list" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="settings_balance_history"
            app:title="@string/settings_view_balance_history" />

        <Preference
            app:key="settings_services"
            app:title="@string/settings_services"
            app:iconSpaceReserved="false"
            app:summary="@string/settings_services_summary" />

        <Preference
            app:key="settings_contact_us"
            app:title="@string/settings_contact_us"
            app:iconSpaceReserved="false"
            app:summary="@string/settings_contact_us_summary" />

    </PreferenceCategory>


    <PreferenceCategory
        app:key="header_others"
        app:iconSpaceReserved="false"
        app:title="@string/settings_header_others">

        <Preference
            app:key="settings_logout"
            app:title="@string/settings_logout"
            app:enabled="true"
            app:iconSpaceReserved="false"
            app:summary="" />

    </PreferenceCategory>

</PreferenceScreen>
