<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_profile_refresh" android:title="@string/action_refresh"
        android:orderInCategory="100" app:showAsAction="never"
        app:iconTint="@color/md_theme_balck_2"
        android:iconTint="@color/md_theme_balck_2" />
    <item android:id="@+id/action_profile_report" android:title="@string/action_report"
        android:orderInCategory="100" app:showAsAction="never"
        app:iconTint="@color/md_theme_balck_2"
        android:iconTint="@color/md_theme_balck_2" />
    <item android:id="@+id/action_profile_block" android:title="@string/action_block"
        android:orderInCategory="100" app:showAsAction="never"
        app:iconTint="@color/md_theme_balck_2"
        android:iconTint="@color/md_theme_balck_2" />
    <item android:id="@+id/action_profile_edit_photo" android:title="@string/action_profile_edit_photo"
        android:orderInCategory="100" app:showAsAction="never"
        app:iconTint="@color/md_theme_balck_2"
        android:iconTint="@color/md_theme_balck_2" />
    <item android:id="@+id/action_profile_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never"
        app:iconTint="@color/md_theme_balck_2"
        android:iconTint="@color/md_theme_balck_2" />
</menu>
