<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">

        <com.investokar.poppi.view.GradientTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_screen_5_title"
            android:layout_marginTop="@dimen/spacing_large"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/register_screen_5_subtitle"
            android:textColor="@color/md_theme_balck_3"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

        <TextView
            android:id="@+id/button_grant_location_permission"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/action_grant_access"
            android:textColor="@color/md_theme_white_3"
            android:background="@drawable/circular_button"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>


        <TextView
            android:id="@+id/center_next_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/action_finish"
            android:textColor="@color/md_theme_white_3"
            android:background="@drawable/app_profile_button"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

</RelativeLayout>