<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_sex"
                android:layout_marginLeft="6dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_gender_any"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/label_gender_any" />

                    <RadioButton
                        android:id="@+id/radio_gender_male"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/label_male" />

                    <RadioButton
                        android:id="@+id/radio_gender_female"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/label_female" />

                    <RadioButton
                        android:id="@+id/radio_gender_other"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_other"
                        android:layout_weight="1" />

                </RadioGroup>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_additional"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="6dp"
                android:layout_marginBottom="6dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_hotgame_liked_checkbox"
                    android:id="@+id/likedCheckBox"
                    android:layout_gravity="center_horizontal" />

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_distance"
                android:id="@+id/distance_label"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="6dp"
                android:layout_marginBottom="6dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal" >

                    <androidx.appcompat.widget.AppCompatSeekBar
                        android:id="@+id/choice_distance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/spacing_large"
                        android:max="12500"
                        android:thumb="@drawable/seek_thumb_primary_outline" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
