<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/background_login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:id="@+id/bounceLinearLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="40sp"
                android:text="Find Your\nLove"
                android:textColor="@color/overlay_light_90" />


            <EditText
                android:id="@+id/email_edit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:hint="@string/placeholder_email"
                android:ems="10"
                android:layout_marginTop="10dp"
                android:maxLength="64"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textCursorDrawable="@null"
                android:background="@drawable/edittext_background" />

            <EditText
                android:id="@+id/username_edit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:hint="@string/placeholder_login"
                android:ems="10"
                android:layout_marginTop="10dp"
                android:maxLength="64"
                android:visibility="gone"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textCursorDrawable="@null"
                android:background="@drawable/edittext_background" />


            <EditText
                android:id="@+id/password_edit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:hint="@string/placeholder_password"
                android:ems="10"
                android:layout_marginTop="10dp"
                android:maxLength="64"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textCursorDrawable="@null"
                android:background="@drawable/edittext_background" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_register_terms"
                android:textColor="@color/overlay_light_80"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/button_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_label_terms_and_policies"
                android:layout_marginTop="5dp"
                android:textColor="@color/overlay_light_80" />


            <TextView
                android:id="@+id/signupBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/action_signup"
                android:background="@drawable/button_radius"
                android:gravity="center"
                android:layout_marginTop="20dp" />


            <TextView
                android:id="@+id/google_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/action_login_with_google"
                android:background="@drawable/button_radius"
                android:gravity="center"
                android:layout_marginTop="50dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="OR"
                android:layout_marginTop="10dp"
                android:textColor="@color/overlay_light_80"
                android:gravity="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/action_login"
                android:background="@drawable/button_radius"
                android:gravity="center"
                android:layout_marginTop="10dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>