<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">


        <com.investokar.poppi.view.GradientTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:gravity="center"
            android:text="@string/register_screen_4_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/register_screen_4_subtitle"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/md_theme_balck_3" />

        <EditText
            android:id="@+id/fullname_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_transparent"
            android:ems="10"
            android:hint="@string/placeholder_fullname"
            android:textColor="@color/md_theme_balck_3"
            android:textColorHint="@color/md_theme_balck_1"
            android:inputType="textPersonName"
            android:maxLength="64"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textCursorDrawable="@null" />

        <TextView
            android:id="@+id/center_next_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/action_next"
            android:textColor="@color/md_theme_white_3"
            android:background="@drawable/app_profile_button"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>



</RelativeLayout>