<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_login">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:gravity="center"
            android:text="@string/register_screen_4_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/register_screen_4_subtitle"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@android:color/white" />

        <ImageView
            android:id="@+id/gender_image"
            android:layout_width="172dp"
            android:layout_height="172dp"
            android:layout_margin="@dimen/spacing_middle"
            app:srcCompat="@drawable/ic_gender_image" />

        <EditText
            android:id="@+id/fullname_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="@string/placeholder_fullname"
            android:inputType="textPersonName"
            android:maxLength="64"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textCursorDrawable="@null" />

        <TextView
            android:id="@+id/button_choose_gender"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_radius"
            android:gravity="center"
            android:text="@string/action_choose_gender"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>



</RelativeLayout>